--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "~11.2.4",
     "@angular/core": "~11.2.4",
     "@angular/forms": "~11.2.4",
+    "@angular/localize": "~11.2.4",
     "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
@@ -26,11 +27,17 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@ionic/angular": "^5.6.9",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "@types/chart.js": "^2.9.32",
     "angular-bootstrap-md": "^11.1.0",
+    "angular-create-pdf": "^2.0.0",
     "animate.css": "^3.7.2",
+    "bootstrap": "^5.0.1",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.6.0",
+    "pdfmake": "^0.1.71",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
